# iot-creative

./: README.md  sdkconfig
components/HC-SR501/: CMakeLists.txt  HC-SR501.c
components/HC-SR501/include/: HC_SR501.h
components/OV7670/: CMakeLists.txt  OV7670.c
components/OV7670/include/: OV7670.h
components/commands/: commands.c
components/commands/include/: commands.h
components/commands_handle/: commands_handle.c
components/commands_handle/include/: commands_handle.h
components/control_buttons/: CMakeLists.txt  control_buttons.c
components/control_buttons/include/: control_buttons.h
components/defines/: CMakeLists.txt  defines.h
components/esp_now_routine/: CMakeLists.txt  esp_now_routine.c
components/esp_now_routine/include/: esp_now_routine.h
components/http_server/: CMakeLists.txt  http_server.c
components/http_server/include/: custom_http_server.h
components/socket_connection/: socket_connection.c
components/socket_connection/include/: socket_connection.h
components/uart_console/: uart_console.c
components/wifi_connection/: wifi_connection.c
components/wifi_events/: wifi_events.c
html/: app.js  index.html
main/: CMakeLists.txt  main.c
main/include/: main.h
